<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentWelcome"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/welcome"
        android:layout_gravity="center"
        android:layout_below="@+id/apiplug"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/apiplug"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_menu"
        android:id="@+id/textView2"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/legend"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:drawableLeft="@drawable/gender_male"
                android:drawableStart="@drawable/gender_male"
                android:text="@string/male_gender_pokemon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:drawableLeft="@drawable/gender_female"
                android:drawableStart="@drawable/gender_female"
                android:text="@string/female_gender_pokemon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:drawableLeft="@drawable/star_circle"
                android:drawableStart="@drawable/star_circle"
                android:text="@string/shiny_pokemon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:drawableLeft="@drawable/pokeball"
                android:drawableStart="@drawable/pokeball"
                android:text="@string/not_yet_scanned_tap_to_mark_as_scanned"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:drawableLeft="@drawable/catched"
                android:drawableStart="@drawable/catched"
                android:text="@string/already_scanned"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
