<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leonelatencio.pokedexqr.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/desc1_header"
                        android:text="@string/desc1_header"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textStyle="normal|bold"
                        android:layout_gravity="center_horizontal" />

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"

                        android:id="@+id/desc1_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:id="@+id/desc1_body"
                        android:text="@string/desc1_body"
                        android:textStyle="normal" />

                </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/desc2_header"
                    android:text="@string/desc2_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textStyle="normal|bold"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:id="@+id/desc2_image"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/desc2_body"
                    android:text="@string/desc2_body"
                    android:textStyle="normal" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/desc3_header"
                    android:text="@string/desc3_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textStyle="normal|bold"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:id="@+id/desc3_image"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/desc3_body"
                    android:text="@string/desc3_body"
                    android:textStyle="normal" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/desc4_header"
                    android:text="@string/desc4_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textStyle="normal|bold"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:id="@+id/desc4_image"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/desc4_body"
                    android:textStyle="normal" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>